# dependent-sum

./: .gitignore  .travis.yml  ChangeLog.md  README.md  cabal.project  dependent-sum-template.cabal  dependent-sum.cabal
.github/workflows/: haskell.yml
dependent-sum/: ChangeLog.md  dependent-sum.cabal
dependent-sum-template/: ChangeLog.md  dependent-sum-template.cabal
dependent-sum-template/src/Data/Dependent/Sum/TH/: Internal.hs
dependent-sum-template/src/Data/GADT/Compare/: Monad.hs  TH.hs
dependent-sum-template/src/Data/GADT/Show/: TH.hs
dependent-sum-template/test/: test.hs
dependent-sum/examples/: FooGADT.hs
dependent-sum/src/Data/: Some.hs
dependent-sum/src/Data/Dependent/: Sum.hs  Sum.hs-boot
dependent-sum/src/Data/GADT/: Compare.hs  Show.hs
dependent-sum/src/Data/Some/: Lazy.hs
examples/: FooGADT.hs
src/: Test.hs
src/Data/: Some.hs
src/Data/Dependent/: Sum.hs  Sum.hs-boot
src/Data/Dependent/Sum/: Typeable.hs
src/Data/Dependent/Sum/TH/: Internal.hs
src/Data/GADT/: Compare.hs  Show.hs  Tag.hs
src/Data/GADT/Compare/: TH.hs
src/Data/GADT/Show/: TH.hs
src/Language/Haskell/TH/: Utils.hs
test/: test.hs
