name:                   dependent-sum-template
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Template Haskell code to generate instances of classes in dependent-sum package
description:            Template Haskell code to generate instances of classes in dependent-sum package, such as 'GEq' and 'GCompare'.

Library
  hs-source-dirs:       src
  exposed-modules:      Data.GADT.Compare.TH
  build-depends:        base >= 3 && <5,
                        dependent-sum,
                        template-haskell
