name:                   dependent-sum-template
version:                0.0.0.3
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Template Haskell code to generate instances of classes in dependent-sum package
description:            Template Haskell code to generate instances of classes in dependent-sum package, such as 'GEq' and 'GCompare'.

source-repository head
  type: git
  location: git://github.com/mokus0/dependent-sum-template.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.GADT.Compare.TH
                        Data.GADT.Show.TH
  build-depends:        base >= 3 && <5,
                        dependent-sum >= 0.2 && < 0.4,
                        template-haskell,
                        th-extras >= 0.0.0.2
