name:                   dependent-sum
version:                0.2.0.1
stability:              provisional

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/dependent-sum

category:               Data, Dependent Types
synopsis:               Dependent sum type
description:            Dependent sums and supporting typeclasses for
                        comparing and formatting them.

tested-with:            GHC == 7.0.4, GHC == 6.12.3, GHC == 6.10.4

extra-source-files:     examples/*.hs

source-repository head
  type:     git
  location: git://github.com/mokus0/dependent-sum.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Dependent.Sum
                        Data.GADT.Compare
                        Data.GADT.Show
  other-modules:        Data.Dependent.Sum.Typeable
  build-depends:        base >= 3 && <5
  if impl(ghc >= 7.2)
    ghc-options:        -trust base
