name:                   dependent-sum
version:                0.4
stability:              provisional

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/dependent-sum

category:               Data, Dependent Types
synopsis:               Dependent sum type
description:            A dependent sum is a generalization of a
                        particular way of thinking about the @Either@
                        type.  @Either a b@ can be thought of as a
                        2-tuple @(tag, value)@, where the value of the
                        tag determines the type of the value.  In
                        particular, either @tag = Left@ and @value :: a@
                        or @tag = Right@ and @value :: b@.
                        .
                        This package allows you to define your own
                        dependent sum types by using your own \"tag\"
                        types.

tested-with:            GHC == 7.0.4,
                        GHC == 7.2.2,
                        GHC == 7.4.2,
                        GHC == 7.6.3,
                        GHC == 7.8.4,
                        GHC == 7.10.1,
                        GHC == 7.11

extra-source-files:     examples/*.hs

source-repository head
  type:     git
  location: git://github.com/mokus0/dependent-sum.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Dependent.Sum
                        Data.GADT.Compare
                        Data.GADT.Show
                        Data.Some
  
  if impl(ghc < 7.8)
    other-modules:      Data.Dependent.Sum.Typeable
  
  build-depends:        base >= 3 && <5
  if impl(ghc >= 7.2)
    ghc-options:        -trust base
