name:                   dependent-sum-template
version:                0.0.0.6
stability:              experimental

cabal-version:          >= 1.8
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             Ryan Trinkle <ryan.trinkle@obsidian.systems>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               Template Haskell code to generate instances of classes in dependent-sum package
description:            Template Haskell code to generate instances of classes in dependent-sum package, such as 'GEq' and 'GCompare'.

tested-with:            GHC == 8.0.2,
                        GHC == 8.2.2,
                        GHC == 8.4.4,
                        GHC == 8.6.3

source-repository head
  type: git
  location: https://github.com/mokus0/dependent-sum-template

Library
  hs-source-dirs:       src
  exposed-modules:      Data.GADT.Compare.TH
                        Data.GADT.Show.TH
  other-modules:        Data.Dependent.Sum.TH.Internal
  build-depends:        base >= 3 && <5,
                        dependent-sum >= 0.2 && < 0.6,
                        template-haskell,
                        th-extras >= 0.0.0.2

test-suite test
  if impl(ghc < 8.0)
    buildable: False
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: test.hs
  build-depends: base
               , dependent-sum
               , dependent-sum-template
