name:                   dependent-sum-template
version:                0.1.1.1
stability:              experimental

cabal-version:          >= 1.10
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             Obsidian Systems, LLC <maintainer@obsidian.systems>
license:                PublicDomain
homepage:               https://github.com/obsidiansystems/dependent-sum

category:               Unclassified
synopsis:               Template Haskell code to generate instances of classes in dependent-sum package
description:            Template Haskell code to generate instances of classes in dependent-sum package, such as 'GEq' and 'GCompare'.

tested-with:            GHC == 8.0.2,
                        GHC == 8.2.2,
                        GHC == 8.4.4,
                        GHC == 8.6.5,
                        GHC == 8.8.3,
                        GHC == 9.0.1

extra-source-files:     ChangeLog.md

source-repository head
  type: git
  location: https://github.com/obsidiansystems/dependent-sum

Library
  if impl(ghc < 7.10)
    buildable: False
  hs-source-dirs:       src
  default-language:     Haskell2010
  exposed-modules:      Data.GADT.Compare.TH
                        Data.GADT.Show.TH
  other-modules:        Data.Dependent.Sum.TH.Internal
  build-depends:        base >= 3 && <5,
                        dependent-sum >= 0.4.1 && < 0.8,
                        template-haskell,
                        th-extras >= 0.0.0.2,
                        th-abstraction >= 0.4

test-suite test
  if impl(ghc < 8.0)
    buildable: False
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-language:     Haskell2010
  main-is: test.hs
  build-depends: base
               , constraints-extras
               , dependent-sum
               , dependent-sum-template
