name:                   dependent-sum
version:                0.7.1.0
stability:              provisional

cabal-version:          1.22
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             Obsidian Systems, LLC <maintainer@obsidian.systems>
license:                PublicDomain
homepage:               https://github.com/obsidiansystems/dependent-sum

category:               Data, Dependent Types
synopsis:               Dependent sum type
description:            A dependent sum is a generalization of a
                        particular way of thinking about the @Either@
                        type.  @Either a b@ can be thought of as a
                        2-tuple @(tag, value)@, where the value of the
                        tag determines the type of the value.  In
                        particular, either @tag = Left@ and @value :: a@
                        or @tag = Right@ and @value :: b@.
                        .
                        This package allows you to define your own
                        dependent sum types by using your own \"tag\"
                        types.

tested-with:            GHC == 8.0.2,
                        GHC == 8.2.2,
                        GHC == 8.4.4,
                        GHC == 8.6.5,
                        GHC == 8.8.3

extra-source-files:     ChangeLog.md
                      , examples/*.hs

source-repository head
  type:     git
  location: https://github.com/obsidiansystems/dependent-sum

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  exposed-modules:      Data.Dependent.Sum
  reexported-modules:   Data.GADT.Compare,
                        Data.GADT.Show,
                        Data.Some
  other-extensions:     PatternSynonyms
  build-depends:        base >= 4.9 && <5
                      , constraints-extras >= 0.2 && < 0.4

  -- tight bounds, so re-exported API is versioned properly.
  build-depends:        some >= 1.0.1 && < 1.0.4

  if impl(ghc >= 7.2)
    ghc-options:        -trust base
